update ass hoan thien

--- a/Lab08_PD06987_Web2022/Bai01.html
+++ b/Lab08_PD06987_Web2022/Bai01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bai 01 - Lab03</title>
+    <title>Bai 01 - Lab08</title>
     <style>
         p{
             text-align: center;
@@ -16,8 +16,13 @@
 </head>
 <body>
     <header>
-        <h1> Minh Hòa</h1>
-        <p>Real live is simple life</p>
+        <h1> Cac trang web dung GRID</h1>
+        <p>https://www.24h.com.vn/</p>
+        <p>https://vnexpress.net/</p>
+        <p>https://www.telegraph.co.uk/</p>
+        <p></p>
+        <p></p>
+
     </header>
 </body>
 </html>
