--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -34,7 +34,7 @@
         <div class="nav">
             <div class="nav-left">
                 <a class="ic-mn" href="index.html" target="page" style="margin-left: 20px;"><span class="material-symbols-outlined" style="color: rgb(136, 197, 253);" >home</span></a>
-                <a class="ctr" href="index.html" target="page" style="color: rgb(136, 197, 253);"> TRANG CHỦ</a>
+                <a class="ctr" href="index.html" target="page"> TRANG CHỦ</a>
                 <a class="ctr" href="SanPham.html" target="page">SẢN PHẨM</a>
                 <a class="ctr" href="DaiLy.html" target="page">ĐẠI LÝ</a>
             </div>
