reponsive dthoai 767px

--- a/Assignment/DaiLy.html
+++ b/Assignment/DaiLy.html
@@ -62,7 +62,7 @@
                                 </span>@mail........</p>                    </div>
                     </div>
                 </div>
-                <div class="agency">
+                <div class="agency" style="            box-shadow: 0 0px 5px 2px rgb(143, 143, 252);">
                     <img src="./Images/daily-02.jpg" alt="">
                     <p class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, molestiae atque! Asperiores corrupti, a, debitis rem vel veniam nihil necessitatibus perferendis explicabo pariatur, cum impedit natus ullam fuga quae! Iusto minima modi molestias vel. Expedita voluptatum, dicta unde illo molestias optio magni dolorem voluptates suscipit necessitatibus hic dolorum, delectus accusamus!</p>
                     <div class="agencor">
